// DBML schema for GreetKart Django project

Table Account {
  id int [pk, increment]
  first_name varchar(50)
  last_name varchar(50)
  username varchar(50) [unique]
  email varchar(100) [unique]
  phone_number varchar(50)
  date_joined datetime
  last_login datetime
  is_admin boolean
  is_staff boolean
  is_active boolean
  is_superadmin boolean
}

Table UserProfile {
  id int [pk, increment]
  user_id int [ref: > Account.id, unique]
  address_line_1 varchar(200)
  address_line_2 varchar(200)
  profile_picture varchar(255)
  city varchar(20)
  state varchar(20)
  country varchar(20)
}

Table Category {
  id int [pk, increment]
  category_name varchar(50)
  slug varchar(100) [unique]
  description varchar(255)
  cat_image varchar(255)
}

Table Product {
  id int [pk, increment]
  product_name varchar(200) [unique]
  slug varchar(255) [unique]
  description text
  price int
  images varchar(255)
  stock int
  is_available boolean
  category_id int [ref: > Category.id]
  created_date datetime
  modified_date datetime
  rating float
  click_count int
}

Table Variation {
  id int [pk, increment]
  product_id int [ref: > Product.id]
  variation_category varchar(100)
  variation_value varchar(100)
  is_active boolean
  created_data datetime
}

Table ReviewRating {
  id int [pk, increment]
  product_id int [ref: > Product.id]
  user_id int [ref: > Account.id]
  subject varchar(100)
  review text
  rating float
  ip varchar(20)
  status boolean
  created_at datetime
  updated_at datetime
}

Table ProductGalary {
  id int [pk, increment]
  product_id int [ref: > Product.id]
  image varchar(255)
}

Table Cart {
  id int [pk, increment]
  cart_id varchar(250)
  date_added date
}

Table CartItem {
  id int [pk, increment]
  user_id int [ref: > Account.id]
  product_id int [ref: > Product.id]
  cart_id int [ref: > Cart.id]
  quantity int
  is_active boolean
}

Table CartItem_Variations {
  id int [pk, increment]
  cartitem_id int [ref: > CartItem.id]
  variation_id int [ref: > Variation.id]
}

Table Payment {
  payment_id varchar(100) [pk]
  user_id int [ref: > Account.id]
  payment_method varchar(100)
  amount_paid varchar(50)
  status varchar(50)
  created_at datetime
}

Table Order {
  id int [pk, increment]
  user_id int [ref: > Account.id]
  payment_id varchar(100) [ref: > Payment.payment_id]
  order_number varchar(20)
  first_name varchar(50)
  last_name varchar(50)
  phone varchar(15)
  email varchar(100)
  address_line_1 varchar(100)
  address_line_2 varchar(100)
  country varchar(50)
  state varchar(50)
  city varchar(50)
  order_note text
  order_total float
  tax float
  status varchar(10)
  ip varchar(20)
  is_ordered boolean
  created_at datetime
  updated_at datetime
}

Table OrderProduct {
  id int [pk, increment]
  order_id int [ref: > Order.id]
  payment_id varchar(100) [ref: > Payment.payment_id]
  user_id int [ref: > Account.id]
  product_id int [ref: > Product.id]
  tax float
  quantity int
  product_price float
  ordered boolean
  created_at datetime
  updated_at datetime
}

Table OrderProduct_Variations {
  id int [pk, increment]
  orderproduct_id int [ref: > OrderProduct.id]
  variation_id int [ref: > Variation.id]
} 